[gd_scene load_steps=2 format=3 uid="uid://god1xit5rdh4"]

[ext_resource type="Script" path="res://UI/collapsable_region.gd" id="1_bj2s3"]

[node name="CollapsableRegion" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
script = ExtResource("1_bj2s3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CollapseLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "> "

[node name="NameLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Collapsable region"

[node name="ToggleButton" type="TextureButton" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="InsideContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer/ToggleButton" to="." method="_on_toggle_button_pressed"]
